--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.2'
 
 services:
 
@@ -25,7 +25,9 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - type: ../dbdata:/var/lib/postgresql/data
+      - type: volume
+        source: ../dbdata
+        target: /var/lib/postgresql/data
     networks:
       - backend
 
