--- a/docker/Dockerfile.API
+++ b/docker/Dockerfile.API
@@ -1,13 +1,15 @@
 FROM python:3
 
+ADD maddevopsrsa /root/.ssh/
+
 RUN mkdir -p /root/.ssh/
 RUN chmod -R 600 /root/.ssh/
 RUN ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
-RUN wget -O ~/.ssh/id_rsa http://192.168.178.45:8080/id_rsa && chmod 600 ~/.ssh/id_rsa
+RUN chmod 600 ~/.ssh/id_rsa
 RUN git clone git@github.com:juliangruendner/mlService_DockerApi.git
-RUN rm ~/.ssh/id_rsa
     
 CMD cd mlService_DockerApi && \
+    git pull && \
     cd docker && \
     chmod +x ./start.sh && \
     ./start.sh
