--- a/docker/Dockerfile.API
+++ b/docker/Dockerfile.API
@@ -5,7 +5,8 @@ ADD maddevopsrsa /root/.ssh/
 RUN mkdir -p /root/.ssh/
 RUN chmod -R 600 /root/.ssh/
 RUN ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
-RUN chmod 600 ~/.ssh/maddevopsrsa
+RUN mv maddevopsrsa id_rsa
+RUN chmod 600 ~/.ssh/id_rsa
 RUN git clone git@github.com:juliangruendner/mlService_DockerApi.git
     
 CMD cd mlService_DockerApi && \
