--- a/.gitignore
+++ b/.gitignore
@@ -205,6 +205,7 @@ venv.bak/
 .history
 
 ### db data
-/dbdata
+/dbdata/*
+!/dbdata/.gitkeep
 
 # End of https://www.gitignore.io/api/macos,python,intellij,visualstudiocode
