--- a/docker/Dockerfile.API.dev
+++ b/docker/Dockerfile.API.dev
@@ -1,9 +1,7 @@
 FROM python:3
 
-ADD wait-for-it.sh /root
-
 CMD cd /root/src && \
     pip3 install -r requirements.txt && \
-    chmod +x /root/wait-for-it.sh && \
-    ./root/wait-for-it.sh db:5432 && \
+    chmod +x wait-for-it.sh && \
+    ./wait-for-it.sh db:5432 && \
     python3 dockerAPI.py
