--- a/docker/Dockerfile.API.dev
+++ b/docker/Dockerfile.API.dev
@@ -1,7 +1,5 @@
 FROM python:3
 
 CMD cd /root/src && \
-    pip3 install -r requirements.txt && \
-    chmod +x wait-for-it.sh && \
-    ./wait-for-it.sh db:5432 && \
-    python3 dockerAPI.py
+    chmod +x startup.sh && \
+    ./startup.sh
