--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.2'
 services:
 
   api:
+    restart: unless-stopped
     depends_on:
       - db
     ports:
@@ -20,6 +21,7 @@ services:
         target: /usr/bin/docker
 
   db:
+    restart: unless-stopped
     image: postgres:latest
     restart: unless-stopped
     environment:
