--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
 
-  api:
+  ml_service:
     build:
       context: .
-      dockerfile: Dockerfile.API.prod
+      dockerfile: Dockerfile.mlService.prod
