--- a/docker/Dockerfile.mlService.prod
+++ b/docker/Dockerfile.mlService.prod
@@ -7,9 +7,9 @@ RUN chmod -R 600 /root/.ssh/
 RUN ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
 RUN mv /root/.ssh/maddevopsrsa /root/.ssh/id_rsa
 RUN chmod 600 ~/.ssh/id_rsa
-RUN git clone git@github.com:juliangruendner/mlService_DockerApi.git
+RUN git clone git@github.com:juliangruendner/mlService_mlServiceApi.git
     
-CMD cd mlService_DockerApi && \
+CMD cd mlService_mlServiceApi && \
     git pull && \
     cd src/ && \
     chmod +x startup.sh && \
