--- a/docker/all/docker-compose.yml
+++ b/docker/all/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: ml_service
     build:
       context: .
-      dockerfile: Dockerfile.mlService.prod
+      dockerfile: Dockerfile.mlService
     restart: unless-stopped
     depends_on:
       - db
