--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,20 +26,15 @@ services:
       - type: volume
         source: /usr/bin/docker
         target: /usr/bin/docker
-    environment:
-      - DOCKER_USERNAME=imimad
-      - DOCKER_PASSWORD=mad-imi2017!
-      - DOCKER_REGISTRY=https://gruendner.de:5043
-      - DOCKER_REGISTRY_DOMAIN=gruendner.de:5043
+    env_file:
+      - config_mlService.env
 
   db:
     restart: unless-stopped
     image: postgres:latest
     restart: unless-stopped
-    environment:
-      - POSTGRES_USER=mad
-      - POSTGRES_PASSWORD=MAD
-      - POSTGRES_DB=mad
+    env_file:
+      - config_db.env
     ports:
       - "5432:5432"
     volumes:
