--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.2'
 services:
 
   ml_service:
+    container_name: ml_service
     build:
       context: .
       dockerfile: Dockerfile.mlService.dev
@@ -30,6 +31,7 @@ services:
       - config_mlService.env
 
   db:
+    container_name: db
     restart: unless-stopped
     image: postgres:latest
     restart: unless-stopped
