--- a/docker/config_mlService.env
+++ b/docker/config_mlService.env
@@ -1,4 +1,8 @@
-DOCKER_USERNAME=imimad
-DOCKER_PASSWORD=mad-imi2017!
-DOCKER_REGISTRY=https://gruendner.de:5043
+DOCKER_REGISTRY_USERNAME=imimad
+DOCKER_REGISTRY_PASSWORD=mad-imi2017!
+DOCKER_REGISTRY_URL=https://gruendner.de:5043
 DOCKER_REGISTRY_DOMAIN=gruendner.de:5043
+
+ML_SERVICE_ADMIN_USERNAME=admin
+ML_SERVICE_ADMIN_EMAIL=devops4mad@googlemail.com
+ML_SERVICE_ADMIN_PASSWORD=test123
