--- a/docker/config_mlService.env
+++ b/docker/config_mlService.env
@@ -6,3 +6,5 @@ DOCKER_REGISTRY_DOMAIN=gruendner.de:5043
 ML_SERVICE_ADMIN_USERNAME=admin
 ML_SERVICE_ADMIN_EMAIL=devops4mad@googlemail.com
 ML_SERVICE_ADMIN_PASSWORD=test123
+
+PROJECT_NAME=mlservicedev
