--- a/src/mlServiceApi-uwsgi.ini
+++ b/src/mlServiceApi-uwsgi.ini
@@ -4,6 +4,8 @@ wsgi-file = mlServiceAPI.py
 callable = app 
 master = true
 mount = /mlService_mlServiceApi/src=mlServiceAPI:app
+manage-script-name = true
+plugin = python3
 ; www-data uid/gid
 uid = 1
 gid = 1
