--- a/src/mlServiceApi-uwsgi.ini
+++ b/src/mlServiceApi-uwsgi.ini
@@ -7,8 +7,10 @@ mount = /mlService_mlServiceApi/src=mlServiceAPI:app
 manage-script-name = true
 plugin = python3
 ; www-data uid/gid
-uid = 1
-gid = 1
+socket=/tmp/mlServiceApi.sock
+chmod-socket=644
+uid = www-data
+gid = www-data
 die-on-term = true
 processes = 4
 threads = 4
