--- a/src/mlServiceApi-uwsgi.ini
+++ b/src/mlServiceApi-uwsgi.ini
@@ -1,4 +1,6 @@
 [uwsgi]
+socket=/tmp/uwsgi.sock
+chmod-socket=666
 http = 0.0.0.0:5000
 wsgi-file = mlServiceAPI.py 
 callable = app 
@@ -6,7 +8,7 @@ master = true
 mount = /mlService_mlServiceApi/src=mlServiceAPI:app
 manage-script-name = true
 ; www-data uid/gid
-uid = www-data
+uid = root
 gid = www-data
 die-on-term = true
 processes = 4
