add basic nginx server to serve gui and api

--- a/nginx/ketosbrain.nginx.conf
+++ b/nginx/ketosbrain.nginx.conf
@@ -24,7 +24,7 @@ gzip_disable "MSIE [1-6]\.";
         }
 
       location /api/ {
-            proxy_pass http://poll_server:5000/;
+            proxy_pass http://ml_service:5000/;
         }
   }
 
