change standard images, create dockerfile for brain api

--- a/nginx/ketosbrain.nginx.conf
+++ b/nginx/ketosbrain.nginx.conf
@@ -24,7 +24,7 @@ gzip_disable "MSIE [1-6]\.";
         }
 
       location /api/ {
-            proxy_pass http://ml_service:5000/;
+            proxy_pass http://ketos_brain:5000/;
         }
   }
 
@@ -32,8 +32,8 @@ gzip_disable "MSIE [1-6]\.";
         listen       443 ssl;
 
         # SSL
-        ssl_certificate /etc/nginx/conf.d/braincert.pem;
-        ssl_certificate_key /etc/nginx/conf.d/brainkey.pem;
+        ssl_certificate /etc/nginx/conf.d/ketos_auth/braincert.pem;
+        ssl_certificate_key /etc/nginx/conf.d/ketos_auth/brainkey.pem;
 
         ssl on;
         ssl_session_cache  builtin:1000  shared:SSL:10m;
@@ -58,7 +58,7 @@ gzip_disable "MSIE [1-6]\.";
         }
 
         location /api/ {
-            proxy_pass http://ml_service:5000/;
+            proxy_pass http://ketos_brain:5000/;
         }
     }
 }
